--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -1,13 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  first_name: MyString
-  last_name: MyString
+  name: MyString
   email: MyString
-  phone: MyString
 
 two:
-  first_name: MyString
-  last_name: MyString
+  name: MyString
   email: MyString
-  phone: MyString
