--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,18 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+
+
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
